--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/css/template_bootstrap.css": "/css/template_bootstrap.css",
     "/css/fontawesome.css": "/css/fontawesome.css",
+    "/css/dataTables.bootstrap4.css": "/css/dataTables.bootstrap4.css",
     "/img/undraw_posting_photo.svg": "/img/undraw_posting_photo.svg",
     "/js/jquery.js": "/js/jquery.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
@@ -8,5 +9,7 @@
     "/js/sb-admin-2.js": "/js/sb-admin-2.js",
     "/js/Chart.js": "/js/Chart.js",
     "/js/chart-area-demo.js": "/js/chart-area-demo.js",
-    "/js/chart-pie-demo.js": "/js/chart-pie-demo.js"
+    "/js/chart-pie-demo.js": "/js/chart-pie-demo.js",
+    "/js/jquery.dataTables.js": "/js/jquery.dataTables.js",
+    "/js/dataTables.bootstrap4.js": "/js/dataTables.bootstrap4.js"
 }
