--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "bootstrap-datepicker": "^1.9.0",
+        "jquery-mask-plugin": "^1.14.16",
         "startbootstrap-sb-admin-2": "^4.1.1"
     }
 }
